# crewai_customer_support_chatbot

./: README.md  pyproject.toml
deep_resarch/: README.md  crewai_flow.html  pyproject.toml
deep_resarch/data/: cleaned_data.csv  customer_support_tickets_fixed.csv
deep_resarch/notebook/: data_cleanup.ipynb
deep_resarch/notebook/.ipynb_checkpoints/: data_cleanup-checkpoint.ipynb
deep_resarch/src/deep_resarch/: main.py
deep_resarch/src/deep_resarch/crews/customer_support_crew/: __init__.py  customer_support_crew.py
deep_resarch/src/deep_resarch/crews/customer_support_crew/config/: agents.yaml  tasks.yaml
src/deep_research/: main.py
